--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,9 @@
   align-items: center;
   padding: 0;
   background: linear-gradient(45deg, #d3d3d3, #808080);
-
   margin: 0; /* Remove default margin */
   margin-top: -1px;
+  margin-right: -1px;
   height: 100px;
 }
 
@@ -138,7 +138,7 @@ label {
 }
 
 .create-input {
-  width: 100%;
+  width: 90%;
   padding: 10px;
   font-size: 16px;
   border: 1px solid #ccc;
@@ -167,6 +167,9 @@ label {
 .create-link a {
   text-decoration: none;
   color: white;
+  background-color: lightslategray;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 .create-link a:hover {
