--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
   position: sticky;
   top: 0;
   border: 1px solid rgb(236, 236, 236);
+  z-index: 9999;
 }
 
 .blog-logo {
@@ -48,6 +49,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+  color: #0056b3;
 }
 
 .post-card {
@@ -118,7 +120,8 @@
 }
 
 /* Create post form  */
-.create-form {
+.create-form,
+.update-form {
   max-width: 500px;
   margin: 0 auto;
 }
@@ -137,7 +140,8 @@ label {
   margin-bottom: 5px;
 }
 
-.create-input {
+.create-input,
+.update-input {
   width: 90%;
   padding: 10px;
   font-size: 16px;
@@ -145,7 +149,8 @@ label {
   border-radius: 4px;
 }
 
-.createpost-btn {
+.createpost-btn,
+.update-btn {
   padding: 10px 20px;
   font-size: 16px;
   background-color: #007bff;
@@ -155,7 +160,8 @@ label {
   cursor: pointer;
 }
 
-.createpost-btn:hover {
+.createpost-btn:hover,
+.update-btn:hover {
   background-color: #0056b3;
 }
 
@@ -176,4 +182,18 @@ label {
   background-color: darkslategray;
   padding: 10px;
   border-radius: 20px;
+}
+
+.edit-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: #009688;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.edit-button:hover {
+  background-color: #01b19f;
 }
